--- a/DatabaseLink/DatabaseLink.csproj
+++ b/DatabaseLink/DatabaseLink.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddEmployee.cs" />
+    <Compile Include="AddStockUpdate.cs" />
     <Compile Include="AddSupplierUpdate.cs" />
     <Compile Include="ConnectDB.cs" />
     <Compile Include="DBConnect.cs" />
