--- a/Inventory Management System/Inventory Management System.csproj
+++ b/Inventory Management System/Inventory Management System.csproj
@@ -67,6 +67,12 @@
     <Compile Include="AddUpdateStock.Designer.cs">
       <DependentUpon>AddUpdateStock.cs</DependentUpon>
     </Compile>
+    <Compile Include="CashOut.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CashOut.Designer.cs">
+      <DependentUpon>CashOut.cs</DependentUpon>
+    </Compile>
     <Compile Include="DBConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddUpdateStock.resx">
       <DependentUpon>AddUpdateStock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CashOut.resx">
+      <DependentUpon>CashOut.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DBConfig.resx">
       <DependentUpon>DBConfig.cs</DependentUpon>
